--- a/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Home/About.cshtml
+++ b/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Home/About.cshtml
@@ -4,4 +4,21 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+
+    <h2 style="color:white"><bold>  24/7/365 Serive</bold></h2></br>
+    <h4 style="color:white">
+        At Flight Links we operate 24 hours a day, 7 days a week, 365 days a year so you can always be sure that</br> we are available to drive you to or from your
+        destination no matter when you need us.
+        </br>
+        <br />
+        Our drivers are licensed by North Kesteven District Council and have all met the following strict criteria:
+
+        Drivers have completed an 'Enhanced Level' Criminal Records Bureau check</br>
+        Drivers have passed a stringent medical examination</br>
+        Drivers have held a full UK driving licence for over 2 years</br>
+        Travelling to the airport soon and require a punctual transfer service? Call Flight Links now on 01522 878 670 or email us here.
+    </h4>
+</p>
+
+
