--- a/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Home/Contact.cshtml
+++ b/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Home/Contact.cshtml
@@ -5,13 +5,26 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <h3 style="font-size:20px;color:white">
+        We operate 24 hours a day, 365 days a year</br></br>
+
+        Call to book our services now on
+
+        01522 878 670
+    </h3>
 </address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+<address style="color:black">
+    <strong>Suuport</strong>   <a href="mailto:travell@gmail.com">travel@example.com</a><br />
+
 </address>
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
