--- a/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Home/Admin.cshtml
+++ b/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Home/Admin.cshtml
@@ -77,7 +77,7 @@
             <div class="form-group">
                 @*@Html.LabelFor(model => model.EmailId, htmlAttributes: new { @class = "control-label col-md-2" })*@
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Email Id", @required = "required" } })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Name", @required = "required" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
