--- a/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Shared/_Layout.cshtml
+++ b/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <style>
+    @*<style>
 
 
 
@@ -15,7 +15,7 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
-    </style>
+    </style>*@
 </head>
 
 <body>
